--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ android {
                 checkReleaseBuilds false
                 // Or, if you prefer, you can continue to check for errors in release builds,
                 // but continue the build even when errors are found:
-                abortOnError false
+                abortOnError true
             }
         }
     }
@@ -98,13 +98,14 @@ android {
             ext.enableCrashlytics = false
             ext.alwaysUpdateBuildId = false
             crunchPngs false
+            ext.alwaysUpdateBuildId = false
             manifestPlaceholders = [crashlyticsCollectionEnabled: "false"]
         }
 
         release {
             ext.enableCrashlytics = true
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             shrinkResources true
             zipAlignEnabled true
             //proguard com restrição ao log.ver
@@ -131,18 +132,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-perf:19.0.7'
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
     //Android
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.palette:palette:1.0.0'
-    implementation 'org.slf4j:slf4j-android:1.7.28'
+    implementation 'org.slf4j:slf4j-android:1.7.30'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation "com.android.support:design:28.0.0"
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation "com.android.support:design:29.0.0"
 
     //Terceiros
     implementation group: 'info.movito', name: 'themoviedbapi', version: '1.9'
@@ -151,10 +152,10 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
     implementation 'me.relex:circleindicator:1.2.2@aar'
-    implementation 'com.squareup.okhttp3:okhttp:4.1.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.onesignal:OneSignal:3.10.8'
-    implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
+    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
     implementation 'com.github.medyo:fancybuttons:1.9.1'
     implementation 'io.reactivex:rxjava:1.3.8'
@@ -164,11 +165,11 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.10.1') {
         transitive = true
     }
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8-1.4.0-rc'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation 'com.facebook.android:facebook-android-sdk:5.8.0'
+    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'io.github.cdimascio:java-dotenv:5.2.1'
 
