--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ android {
                 // Or, if you prefer, you can continue to check for errors in release builds,
                 // but continue the build even when errors are found:
                 abortOnError true
+                disable "UnsafeExperimentalUsageError",
+                        "UnsafeExperimentalUsageWarning"
             }
         }
     }
