--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           export TMDB_API_KEY=${{ secrets.TMDB_API_KEY }}
           export TMDB_API_KEY2=${{secrets.TMDB_API_KEY2 }}
           export YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}
-          ./gradlew assembleDebug
+#          ./gradlew assembleDebug
       - name: Upload APK
         uses: actions/upload-artifact@v1
         with:
