--- a/build.gradle
+++ b/build.gradle
@@ -6,18 +6,18 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
         maven { url 'https://jitpack.io' }
         maven { url 'https://plugins.gradle.org/m2/'}
         google()
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.28.1'
         classpath 'com.android.tools.build:gradle:4.1.0-alpha06'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:0.12.3'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
