--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,59 +133,62 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     //Google
-    implementation 'com.google.android.gms:play-services-analytics:17.0.0'
-    implementation 'com.google.android.gms:play-services-auth:18.1.0'
-    implementation 'com.google.android.gms:play-services-ads:19.4.0'
+    implementation "com.google.android.gms:play-services-analytics:$playService.analytics"
+    implementation "com.google.android.gms:play-services-auth:$playService.auth"
+    implementation "com.google.android.gms:play-services-ads:$playService.ads"
     //FireBase
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
-    implementation 'com.google.firebase:firebase-database:19.3.1'
-    implementation 'com.google.firebase:firebase-dynamic-links:19.1.0'
-    implementation 'com.google.firebase:firebase-perf:19.0.8'
-    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
-    implementation 'com.google.firebase:firebase-analytics-ktx:17.5.0'
+    implementation "com.google.firebase:firebase-auth:$fire.auth"
+    implementation "com.google.firebase:firebase-dynamic-links:$fire.dynamicLinks"
+    implementation "com.google.firebase:firebase-perf:$fire.perf"
+    implementation "com.google.firebase:firebase-database:$fire.database"
+    implementation "com.google.firebase:firebase-crashlytics:$fire.crashlytics"
+    implementation "com.google.firebase:firebase-analytics-ktx:$fire.analyticsKtx"
     //Android
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.palette:palette:1.0.0'
-    implementation 'org.slf4j:slf4j-android:1.7.30'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation "com.android.support:design:29.0.0"
+    implementation "androidx.appcompat:appcompat:$droid.appcompat"
+    implementation "androidx.constraintlayout:constraintlayout:$droid.constraintlayout"
+    implementation "androidx.recyclerview:recyclerview:$droid.recyclerview"
+    implementation "com.google.android.material:material:$droid.material"
+    implementation "androidx.legacy:legacy-support-v4:$droid.legacy"
+    implementation "androidx.cardview:cardview:$droid.cardview"
+    implementation "androidx.palette:palette:$droid.palette"
+    implementation "org.slf4j:slf4j-android:$droid.slf4j"
+    implementation "androidx.multidex:multidex:$droid.multidex"
+    implementation "javax.annotation:javax.annotation-api:$droid.annotation"
+    implementation "androidx.core:core-ktx:$droid.coreKtx"
+    implementation "com.android.support:design:$droid.design"
+
+    //Lib para suporte
+    implementation "com.github.clans:fab:$other.fab"
+    implementation "fr.avianey.com.viewpagerindicator:library:$other.library"
+    implementation "me.relex:circleindicator:$other.circleIndicator"
+    implementation "com.github.AppIntro:AppIntro:$other.appIntro"
+    implementation "com.ramotion.foldingcell:folding-cell:$other.foldingCell"
+
+    //Chamadas de Api
+    implementation group: 'info.movito', name: 'themoviedbapi', version: '1.9'
+    implementation "com.squareup.okhttp3:okhttp:$call.okhttp"
+    implementation "com.google.code.gson:gson:$call.gson"
+    implementation "com.artemzin.rxjava:proguard-rules:$call.proguardRules"
+    implementation "io.reactivex:rxjava:$call.rxjava"
+    implementation "io.reactivex:rxandroid:$call.rxandroid"
+    implementation "com.squareup.picasso:picasso:$call.picasso"
 
     //Terceiros
-    implementation group: 'info.movito', name: 'themoviedbapi', version: '1.9'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.squareup:otto:1.3.8'
-    implementation 'com.github.clans:fab:1.6.4'
-    implementation 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
-    implementation 'me.relex:circleindicator:1.2.2@aar'
-    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.onesignal:OneSignal:3.10.8'
-    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
-    implementation 'com.github.AppIntro:AppIntro:5.1.0'
-    implementation 'com.github.medyo:fancybuttons:1.9.1'
-    implementation 'io.reactivex:rxjava:1.3.8'
-    implementation 'com.artemzin.rxjava:proguard-rules:1.3.3.0'
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'com.ramotion.foldingcell:folding-cell:1.2.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9-native-mt-2'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation 'com.facebook.android:facebook-android-sdk:7.1.0'
-    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation "com.onesignal:OneSignal:$support.OneSignal"
+    implementation "com.facebook.android:facebook-android-sdk:$support.facebookAndroid"
+    implementation "com.github.medyo:fancybuttons:$support.fancybuttons"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$support.kotlinxCoroutinesAndroid"
+    implementation "androidx.fragment:fragment-ktx:$support.fragmentKtx"
+    implementation "androidx.lifecycle:lifecycle-extensions:$support.lifecycleExtensions"
+    implementation "android.arch.lifecycle:extensions:$support.archLifecycleExtensions"
+    implementation "com.facebook.android:facebook-android-sdk:$support.facebookAndroidSdk"
+    implementation "com.facebook.shimmer:shimmer:$support.shimmer"
 
     //Teste
-    testImplementation "io.mockk:mockk:$mockk"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
+    testImplementation "io.mockk:mockk:$test.mockk"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$test.espressoCore"
+    androidTestImplementation "androidx.test:runner:$test.runner"
+    androidTestImplementation "androidx.test:rules:$test.rules"
 }
 
 apply plugin: 'com.google.gms.google-services'
