--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,79 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    ext.mockk = '1.10.0'
+    ext.kotlin_version = '1.4.0'
+
+    ext.fire = [
+            'auth'        : '19.4.0',
+            'database'    : '19.4.0',
+            'dynamicLinks': '19.1.0',
+            'perf'        : '19.0.8',
+            'crashlytics' : '17.2.1',
+            'analyticsKtx': '17.5.0'
+    ]
+
+    ext.playService = [
+            'analytics': '17.0.0',
+            'auth'     : '18.1.0',
+            'ads'      : '19.4.0'
+    ]
+
+    ext.droid = [
+            'appcompat'       : '1.2.0',
+            'constraintlayout': '2.0.1',
+            'recyclerview'    : '1.1.0',
+            'material'        : '1.2.1',
+            'legacy'          : '1.0.0',
+            'cardview'        : '1.0.0',
+            'palette'         : '1.0.0',
+            'slf4j'           : '1.7.30',
+            'multidex'        : '2.0.1',
+            'annotation'      : '1.3.2',
+            'coreKtx'         : '1.3.1',
+            'design'          : '29.0.0'
+    ]
+
+    ext.other = [
+            'fab'            : '1.6.4',
+            'library'        : '2.4.1.1@aar',
+            'circleIndicator': '1.2.2@aar',
+            'appIntro'       : '5.1.0',
+            'foldingCell'    : '1.2.3'
+    ]
+
+    ext.test = [
+            'mockk'       : '1.10.0',
+            'espressoCore': '3.3.0',
+            'runner'      : '1.3.0',
+            'rules'       : '1.3.0'
+    ]
+
+    ext.call = [
+            'okhttp'       : '4.8.1',
+            'gson'         : '2.8.6',
+            'proguardRules': '1.3.3.0',
+            'rxjava'       : '1.3.8',
+            'rxandroid'    : '1.2.1',
+            'picasso'      : '2.71828'
+    ]
+
+    ext.support = [
+            'OneSignal'               : '3.10.8',
+            'facebookAndroid'         : '7.1.0',
+            'fancybuttons'            : '1.9.1',
+            'kotlinxCoroutinesAndroid': '1.3.9-native-mt-2',
+            'fragmentKtx'             : '1.2.5',
+            'lifecycleExtensions'     : '2.2.0',
+            'archLifecycleExtensions' : '1.1.1',
+            'facebookAndroidSdk'      : '7.1.0',
+            'shimmer'                 : '0.5.0'
+    ]
+
     repositories {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://plugins.gradle.org/m2/'}
+        maven { url 'https://plugins.gradle.org/m2/' }
         google()
     }
     dependencies {
