--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
     ]
 
     ext.droid = [
-            'appcompat'       : '1.2.0',
+            'appcompat'       : '1.3.0-alpha02',
             'constraintlayout': '2.0.1',
             'recyclerview'    : '1.1.0',
             'material'        : '1.2.1',
