--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.0'
+    ext.kotlin_version = '1.4.10'
 
     ext.fire = [
             'auth'        : '19.4.0',
@@ -50,6 +50,7 @@ buildscript {
 
     ext.call = [
             'okhttp'       : '4.8.1',
+            'loggingInterceptor' : '4.8.1',
             'gson'         : '2.8.6',
             'proguardRules': '1.3.3.0',
             'rxjava'       : '1.3.8',
