--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,7 +146,7 @@
         </activity>
 
         <activity
-            android:name="elenco.ElencoActivity"
+            android:name="elenco.WorksActivity"
             android:parentActivityName="main.MainActivity">
 
 
