--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -191,7 +191,7 @@
 
 
         <activity
-            android:name="produtora.activity.ProdutoraActivity"
+            android:name="produtora.activity.ProductionActivity"
             android:parentActivityName="main.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
