--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,14 @@ buildscript {
     ]
 
     ext.test = [
-            'mockk'       : '1.10.0',
-            'espressoCore': '3.3.0',
+            'mockK'       : '1.10.0',
             'runner'      : '1.3.0',
-            'rules'       : '1.3.0'
+            'rules'       : '1.3.0',
+            'truth'  : '1.3.0-alpha01',
+            'junit' : '4.12',
+            'coreTesting' : '2.0.0',
+            'androidxTestRunner' : '1.3.0-alpha01',
+            'espressoCore' : '3.3.0-alpha01'
     ]
 
     ext.call = [
