--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,7 @@
                 android:value="activity.SearchMultiActivity" />
         </activity>
 
-        <activity android:name="activity.ListGenericActivity">
+        <activity android:name="lista.ListGenericActivity">
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
